[package]
name = "lz_fnv"
version = "0.1.0"
authors = ["Luke Horsley <luke.horsley@offset1337.co.uk>"]

[dependencies]
extprim = { version = "1.4.0", optional = true }
extprim_literals = { version = "2.0.0", optional = true }

[features]
default = []
nightly = []
u128 = ["extprim", "extprim_literals"]